# uni

./: .gitignore  main.cpp
ag/lab1/: Makefile  adjacence.txt  convert  convert.c  edges.c  edges.h  incidence.txt
ag/lab3/: Makefile  bellman_ford  bellman_ford.c  dijkstra.cpp  graf.txt  graf_dijkstra.txt
ag/second_test/: graf.in  test  test.cpp  test_10  test_10.cpp
ai/lab1/: element_repeating.py  euclidean_distance.py  majority_element.py  rare_vector_product.py  word_occurances.py
ai/lab10/: .gitignore  ActivationLayer.py  FullyConnectedLayer.py  Layer.py  Network.py  iris_ann.py  math_utils.py  metrics_utils.py  model_utils.py  numbers_ann.py  requirements.txt  sepia_ann.py  sepia_utils.py
ai/lab11/: iris_kmeans.py  kmeans.py  test_kmeans.py
ai/lab2/: easy_01_tsp.txt  easy_01_tsp_own_solution.txt  easy_01_tsp_solution.txt  easy_03_tsp.txt  easy_03_tsp_own_solution.txt  easy_03_tsp_solution.txt  hard_01_tsp.txt  hard_01_tsp_own_solution.txt  hard_01_tsp_solution.txt  medium_01_tsp.txt  medium_01_tsp_own_solution.txt  medium_01_tsp_solution.txt  specification_tsp.txt  tsp.py
ai/lab3/: chromosome.py  communities_chromosome.py  communities_graph.py  communities_main.py  communities_parameters.py  genetic_algorithm.py  graph.py  graph_parameters.py  main.py  parameters.py  tsp_chromosome.py  tsp_graph.py  tsp_main.py  utils.py
ai/lab5/: .gitignore  aco.py  ant.py  graph.py  main.py  parameters.py
ai/lab6/: binary_class_error.py  checks.py  multi_class_error.py  multi_class_performance.py  multi_label_error.py  multi_target_error.py  single_target_error.py
ai/lab7/: 2017.csv  batch_gradient_descent.py  least_squares_happiness.py  manual_batch_gradient_descent.py  manual_linear_model.py  manual_linear_regression.py  manual_normalizer.py  normalizer.py
ai/lab9/: data_utils.py  linear_regression_iris.py  logistic_regressor.py  manual_logistic_regressor.py  metrics_utils.py  requirements.txt
asm/lab10/: main.c  module.asm
asm/lab2/: s1a_14.asm  s2a_14.asm  s2b_14.asm  s3a_14.asm  s3b_14.asm
asm/lab3/: s1a_14.asm  s1b_14.asm  s2a_14.asm  s2b_14.asm
asm/lab4/: s1a_19.asm
asm/lab5/: s1a_28.asm
asm/lab6/: s1a_27.asm
asm/lab7/: s1a_14.asm  s2a_17.asm
asm/lab9/: s1a_4_main.asm  s1a_4_read_array.asm
catalyst/level1/: level1.py  level1_1.out  level1_2.out  level1_3.out  level1_4.out  level1_5.out  level1_example.out
catalyst/level2/: level2.py  level2_0.in
catalyst/level3/: level3.py
catalyst/level4/: level4.py
cn/lab1/: pade_sym.m
cn/lab10/: adquad2.m  aprox_trapez.m  romberg.m  romberg_rec.m  tema_lab10.m
cn/lab11/: examen.m  gauss_quad_num.m  gauss_quad_num_ceb1.m  gauss_quad_sym.m  octave-workspace  orto_coef_num.m  orto_coef_sym.m  tema_lab11.m
cn/lab2/: cosred.m  mycos.m  mymax.m  mymin.m  myminsubnorm.m  mysin.m  pade_sym.m  reducereper.m  sinred.m
cn/lab2_inclass/: num2float.m  pade_sym.m  taylor_coef.m
cn/lab3/: condPol.m
cn/lab4/: GaussElimPivot.m  backward_sub.m  cholesky.m  eliminare_gauss.m  explicatii.txt  forward_sub.m  lup.m  solve_sist_cholesky.m  solve_sist_lup.m  spd.m  test.m
cn/lab5/: gauss_seidel.m  gauss_seidel_it.m  jacobi.m  jacobi_it.m  model_sys_lin.m  (+6 more)
db/: CRUD.sql  Create.sql  CreateTestTables.sql  Issues_1.sql  Issues_2.sql  Populate.sql  PopulateTestTables.sql  Practic.sql  Query.sql  Test.sql  Transactions.sql  Upgrade.sql
lftc/: lab1.txt
lftc/lab2/: BinarySearchTree.h  CMakeLists.txt  FiniteStateMachine.cpp  FiniteStateMachine.h  Lexer.cpp  Lexer.h  LexerStatus.h  LexerTokenIds.h  LexerTokens.h  StreamUtils.cpp  c_grammar.txt  fsm_catch_all.txt  fsm_id.txt  fsm_input_bnf.txt  fsm_integer.txt  fsm_real.txt  fsm_test.txt  main.cpp  test.c.txt  utils.cpp  utils.h
lftc/lab2/finite_state_machine/: FiniteStateMachine.cpp
lftc/lab2/grammar/: Grammar.h  ProductionRule.h  RecursiveDescentParser.h
lftc/lab2/lexer/: Lexer.cpp  Lexer.h  LexerTokens.h
lftc/lab2/stream_utils/: StreamUtils.h
lftc/lab4/: .gitignore  CMakeLists.txt  Grammar.h  ProductionRule.h  RecursiveDescentParser.h  grammar_simple.txt  input.txt  input_simple.txt  main.cpp
pdav/jpeg/: CMakeLists.txt  RawImage.h  main.cpp
pdav/jpeg/dct/: DCTCodec.cpp  DCTCodec.h  DCTImage.h
pdav/jpeg/generic/: BinaryImage.h  BlockImage.h  DataImage.h  Image.h  Int32Image.h  RawImage.h  RawRGBImage.h
pdav/jpeg/ppm/: PPMCodec.cpp  PPMCodec.h
pdav/jpeg/qnt/: QNTCodec.cpp  QNTCodec.h  QNTImage.h
pdav/jpeg/runlength/: RunLengthCodec.cpp  RunLengthCodec.h  RunLengthImage.h
pdav/jpeg/utils/: utils.cpp  utils.h
pdav/jpeg/yuv/: RawYUVImage.h  YUVCodec.cpp  YUVCodec.h  YUVImage.h
pdav/jpeg/yuv420/: YUV420Codec.cpp  YUV420Codec.h  YUV420Image.h
pdav/jpeg/yuv444/: YUV444Codec.cpp  YUV444Codec.h  YUV444Image.h
pdav/jpeg/zigzag/: ZigZagCodec.cpp  ZigZagCodec.h  ZigZagImage.h
ppd/: lab0.docx  lab1.docx  lab2.docx  lab3.docx  lab4.docx
ppd/lab2/: CMakeLists.txt  main.cpp
ppd/lab3-home/: CMakeLists.txt  Numar1.txt  Numar2.txt  addition.h  iterative.cpp  main.cpp  manual.cpp  scatter_gather.cpp
ppd/lab4-home/: CMakeLists.txt  Doxyfile  Polynomial.h  PolynomialAdder.h  PolynomialStream.h  PolynomialStreamsGenerator.h  Queue.h  main.cpp
ps/: email2.txt  lab1.m  lab2.m  lab3.m  lab4_1.m  lab4_2.m  lab5.m  lab6.m  lab7_1.m  lab7_2.m  practic.m
ss/: ctf.txt
(+1201 files in other folders)
